--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- style.css linking here -->
 	<link rel="stylesheet" href="css/style.css">
-	<title>Web design & Development class_03</title>
+	<title>Web design & web Development class_03</title>
 </head>
 <body>
 	<div class="login-box">
@@ -13,29 +13,29 @@
 			<div class="avater-img">
 				<img src="images/avater.png" alt="avater.png" class="avater">
 			</div>
-			<h2>Registrar Here</h2>
+			<h2>Registration Here</h2>
 			<p>Please fill in this form to create an account.</p>
                         <hr>
 
 			<div class="from-group">
 				<label for="">Full Name</label>
-				<input type="text" placeholder="Full Name" class="from-control">
+				<input type="text" placeholder="Enter Your Full Name" class="from-control">
 			</div>
 			<div class="from-group">
 				<label for="">E-Mail Address</label>
-				<input type="text" placeholder="E-Mail Address" class="from-control">
+				<input type="text" placeholder="Enter Your E-Mail Address" class="from-control">
 			</div>
 			<div class="from-group">
 				<label for="">Username</label>
-				<input type="text" placeholder="Username" class="from-control">
+				<input type="text" placeholder="Enter Your Username" class="from-control">
 			</div>
 			<div class="from-group">
 				<label for="">Password</label>
-				<input type="Password" placeholder="Password" class="from-control">
+				<input type="Password" placeholder="Enter Password" class="from-control">
 			</div>
 			<div class="from-group">
 				<label for="">Mobile Number</label>
-				<input type="text" placeholder="Mobile Number" class="from-control">
+				<input type="text" placeholder="Enter Mobile Number" class="from-control">
 			</div>
 			<div class="from-group">
 				<input type="submit" value="Registration" class="btn-btn">
